--- a/app/src/main/res/layout/capsules_recycler_item.xml
+++ b/app/src/main/res/layout/capsules_recycler_item.xml
@@ -28,6 +28,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Capsule ID"/>
+            <TextView
+                    android:id="@+id/missionsTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
