--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_marginEnd="8dp"/>
     <Button
             android:id="@+id/deleteEntriesButton"
-            android:text="Button"
+            android:text="Delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/fetchButton"
