--- a/app/src/main/res/layout/capsules_recycler_item.xml
+++ b/app/src/main/res/layout/capsules_recycler_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -11,31 +12,53 @@
             android:layout_margin="4dp"
             app:cardCornerRadius="@dimen/cardview_default_radius">
 
-        <LinearLayout
-                android:padding="10dp"
-                android:orientation="vertical"
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
+
             <TextView
-                    android:id="@+id/capsuleSerialTV"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Capsule Serial"/>
-            <TextView
-                    android:id="@+id/capsuleIdTV"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Capsule ID"/>
-            <!-- Views below are visible when item is in expanded position -->
-            <TextView
-                    android:id="@+id/missionsTV"
+                    android:id="@+id/text_capsule_serial"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:maxLines="3"
-                    android:visibility="invisible"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                    tools:text="C102" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
+            <TextView
+                    android:id="@+id/text_capsule_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="dragon1" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                    android:id="@+id/text_capsule_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Dragon 1.1" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_capsule_serial"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+
+            <TextView
+                    android:id="@+id/text_capsule_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="active" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_capsule_id" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+
+
+            <TextView
+                    android:id="@+id/text_missions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Missions: 1"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_capsule_type"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
