--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,39 +7,16 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/capsulesRecyclerView"
+    <!-- Nav host fragment -->
+    <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/fetchButton"/>
-
-    <Button
-            android:id="@+id/fetchButton"
-            android:text="Fetch data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/deleteEntriesButton"
-            android:layout_marginEnd="8dp"/>
-    <Button
-            android:id="@+id/deleteEntriesButton"
-            android:text="Delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/fetchButton"
-            app:layout_constraintTop_toTopOf="@+id/fetchButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="64dp"
-            app:layout_constraintVertical_bias="0.0"/>
-
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation_graph"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
