Reorganize project structure

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -3,8 +3,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation_graph" app:startDestination="@id/capsules_dest">
 
-    <fragment android:id="@+id/capsules_dest" android:name="io.github.omisie11.spacexfollower.CapsulesFragment"
+    <fragment android:id="@+id/capsules_dest" android:name="io.github.omisie11.spacexfollower.ui.capsules.CapsulesFragment"
               android:label="CapsulesFragment"/>
-    <fragment android:id="@+id/cores_dest" android:name="io.github.omisie11.spacexfollower.CoresFragment"
+    <fragment android:id="@+id/cores_dest" android:name="io.github.omisie11.spacexfollower.ui.cores.CoresFragment"
               android:label="fragment_cores" tools:layout="@layout/fragment_recycler"/>
 </navigation>
