--- a/app/src/main/res/layout/capsules_recycler_item.xml
+++ b/app/src/main/res/layout/capsules_recycler_item.xml
@@ -1,90 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="6dp"
+android:layout_margin="4dp">
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
+            android:id="@+id/root_relative"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            app:cardCornerRadius="4dp">
+            android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <TextView
+                android:id="@+id/text_capsule_serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="C102"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"/>
 
-            <TextView
-                    android:id="@+id/text_capsule_serial"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="C102" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+                android:id="@+id/text_capsule_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="dragon1"
+                android:layout_below="@id/text_capsule_serial"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"/>
 
-            <TextView
-                    android:id="@+id/text_capsule_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="dragon1" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+                android:id="@+id/text_capsule_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Dragon 1.1"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"/>
 
-            <TextView
-                    android:id="@+id/text_capsule_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Dragon 1.1" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/text_capsule_serial"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+        <TextView
+                android:id="@+id/text_capsule_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="active"
+                android:layout_below="@id/text_capsule_type"
+                android:layout_alignStart="@id/text_capsule_type"
+                android:layout_marginTop="8dp"/>
 
-            <TextView
-                    android:id="@+id/text_capsule_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="active" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/text_capsule_id" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"/>
-
-            <!-- Horizontal divider -->
-            <View
-                    android:id="@+id/horizontal_line"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/darker_gray"
-                    app:layout_constraintTop_toBottomOf="@+id/text_capsule_type" android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
-
-            <TextView
-                    android:id="@+id/text_landings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Landings: 1"
-                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line"
-                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"/>
-
-            <TextView
-                    android:id="@+id/text_missions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Missions: 1"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_landings"/>
-
-            <!-- Group contains views that are visible when card is expanded -->
-            <androidx.constraintlayout.widget.Group
-                    android:id="@+id/group_expand"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:constraint_referenced_ids="text_missions,horizontal_line,text_landings"
-                    android:visibility="invisible"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
