--- a/app/src/main/res/layout/nav_view_header.xml
+++ b/app/src/main/res/layout/nav_view_header.xml
@@ -3,16 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="192dp"
-              android:background="?attr/colorPrimaryDark"
               android:padding="16dp"
-              android:theme="@style/ThemeOverlay.AppCompat.Dark"
               android:orientation="vertical"
-              android:gravity="bottom">
+              android:gravity="bottom"
+              android:background="@color/colorSecondary">
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Space X Follower"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:text="Space X Follower"/>
 
 </LinearLayout>
