Highlight background of selected item in nav drawer

--- a/app/src/main/res/layout/nav_view_header.xml
+++ b/app/src/main/res/layout/nav_view_header.xml
@@ -6,7 +6,7 @@
               android:padding="16dp"
               android:orientation="vertical"
               android:gravity="bottom"
-              android:background="@color/colorSecondary">
+              android:background="@color/colorPrimary">
 
     <TextView
             android:layout_width="match_parent"
