--- a/app/src/main/res/drawable/nav_view_colors.xml
+++ b/app/src/main/res/drawable/nav_view_colors.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
             android:state_checked="true"
-            android:color="@color/colorSecondary"/>
+            android:color="@color/colorOnSecondary"/>
     <item
             android:state_checked="false"
             android:color="@color/colorOnSecondary"/>
