--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,6 @@
             app:headerLayout="@layout/nav_view_header"
             app:menu="@menu/menu_nav_view"
             app:itemIconTint="@drawable/nav_view_colors"
-            app:itemTextColor="@drawable/nav_view_colors"/>
+            app:itemTextColor="@drawable/nav_view_colors"
+            app:itemBackground="@drawable/nav_view_item_background"/>
 </androidx.drawerlayout.widget.DrawerLayout>
