--- a/app/src/main/res/menu/menu_nav_view.xml
+++ b/app/src/main/res/menu/menu_nav_view.xml
@@ -4,15 +4,18 @@
     <item
         android:id="@id/capsules_dest"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="Capsules" />
+        android:title="Capsules"
+        android:checkable="true"/>
 
     <item
         android:id="@id/cores_dest"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="Cores" />
+        android:title="Cores"
+        android:checkable="true"/>
 
     <item
         android:id="@id/settings_dest"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="Settings" />
+        android:title="Settings"
+        android:checkable="true"/>
 </menu>
