--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -3,10 +3,9 @@
     <!-- The background color, preferably the same as your normal theme -->
     <item android:drawable="@color/colorPrimary"/>
     <!-- Your product logo - 144dp color version of your app icon -->
-    <!-- ToDo: Implement app icon
     <item>
         <bitmap
-                android:src=""
+                android:src="@drawable/launch_logo"
                 android:gravity="center"/>
-    </item> -->
+    </item>
 </layer-list>
