Initial company fragment layout

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -3,13 +3,14 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation_graph" app:startDestination="@id/capsules_dest">
 
-    <fragment android:id="@+id/capsules_dest" android:name="io.github.omisie11.spacexfollower.ui.capsules.CapsulesFragment"
-              android:label="CapsulesFragment"/>
+    <fragment android:id="@+id/capsules_dest"
+              android:name="io.github.omisie11.spacexfollower.ui.capsules.CapsulesFragment"
+              android:label="Capsules"/>
     <fragment android:id="@+id/cores_dest" android:name="io.github.omisie11.spacexfollower.ui.cores.CoresFragment"
-              android:label="fragment_cores" tools:layout="@layout/fragment_recycler"/>
+              android:label="Cores" tools:layout="@layout/fragment_recycler"/>
     <fragment android:id="@+id/settings_dest" android:name="io.github.omisie11.spacexfollower.ui.SettingsFragment"
-              android:label="SettingsFragment"/>
+              android:label="Settings"/>
     <fragment android:id="@+id/company_dest"
               android:name="io.github.omisie11.spacexfollower.ui.company.CompanyFragment"
-              android:label="fragment_company" tools:layout="@layout/fragment_company"/>
+              android:label="Company" tools:layout="@layout/fragment_company"/>
 </navigation>
