--- a/app/src/main/res/layout/fragment_company.xml
+++ b/app/src/main/res/layout/fragment_company.xml
@@ -2,38 +2,184 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/swipeRefreshLayout"
+        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/swipeRefreshLayout"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-        <!-- TODO: Update blank fragment layout -->
-        <TextView
-                android:id="@+id/text_company"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-        <Button
-                android:text="Refresh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/refresh_button"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-        <Button
-                android:text="Delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/delete_button" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/refresh_button" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp" app:srcCompat="@drawable/launch_logo"
+                    android:id="@+id/image_logo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:text="SpaceX"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_SpaceX" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/image_logo" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
+            <TextView
+                    android:text="Summary"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_summary"
+                    android:textAlignment="center"
+                    tools:text="SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, with the ultimate goal of enabling people to live on other planets."
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_founder"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:text="Founded by Elon Musk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_founder" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_SpaceX" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
+            <TextView
+                    android:text="Resources"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_resources_title" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_summary"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+            <TextView
+                    android:text="employees"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_title_employees"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_resources_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/text_employees" android:layout_marginEnd="16dp"/>
+            <TextView
+                    android:text="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_employees"
+                    android:textColor="@color/colorSecondary"
+                    app:layout_constraintTop_toTopOf="@+id/text_title_employees"
+                    app:layout_constraintStart_toEndOf="@+id/text_title_employees"
+                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="7000"
+                    android:layout_marginStart="16dp"/>
+            <TextView
+                    android:text="vehicles"
+                    android:layout_width="wrap_content"
+                    android:layout_height="18dp"
+                    android:id="@+id/text_title_vehicles" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_employees"
+                    app:layout_constraintStart_toStartOf="@+id/text_title_employees"/>
+            <TextView
+                    android:text="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_vehicles"
+                    android:textColor="@color/colorSecondary"
+                    app:layout_constraintTop_toTopOf="@+id/text_title_vehicles" tools:text="3"
+                    app:layout_constraintEnd_toEndOf="@+id/text_employees"/>
+            <TextView
+                    android:text="launch sites"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_title_launch_sites"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_title_vehicles"
+                    app:layout_constraintStart_toStartOf="@+id/text_title_vehicles"/>
+            <TextView
+                    android:text="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_launch_sites"
+                    android:textColor="@color/colorSecondary"
+                    app:layout_constraintTop_toTopOf="@+id/text_title_launch_sites" tools:text="3"
+                    app:layout_constraintEnd_toEndOf="@+id/text_vehicles"/>
+            <TextView
+                    android:text="test sites"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_title_test_sites" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_launch_sites"
+                    app:layout_constraintStart_toStartOf="@+id/text_title_launch_sites"/>
+            <TextView
+                    android:text="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_test_sites"
+                    android:textColor="@color/colorSecondary"
+                    app:layout_constraintTop_toTopOf="@+id/text_title_test_sites"
+                    app:layout_constraintEnd_toEndOf="@+id/text_launch_sites" tools:text="1"/>
+            <TextView
+                    android:text="Valuation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_title_valuation" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_test_sites"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+            <TextView
+                    android:text="0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_valuation"
+                    tools:text="15000000000"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorSecondary"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_valuation" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:text="Headquarters"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_title_headquarters" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_valuation"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_address" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_headquarters"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" tools:text="Rocket Road"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_city" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_address" tools:text="Hawthorne"/>
+            <TextView
+                    android:text="city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_state"
+                    app:layout_constraintTop_toBottomOf="@+id/text_city" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" tools:text="California" android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
