--- a/app/src/main/res/layout/fragment_capsule_detail.xml
+++ b/app/src/main/res/layout/fragment_capsule_detail.xml
@@ -1,15 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.capsules.CapsuleDetailFragment">
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.capsules.CapsuleDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:id="@+id/text_capsule_id"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="wrap_content">
 
-</FrameLayout>
+        <TextView
+                android:id="@+id/text_capsule_serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="..."
+                tools:text="C102"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView13"/>
+        <ImageView
+                android:id="@+id/image_capsule"
+                android:src="@color/colorSecondaryLight"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+                android:text="..."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_capsule_type"
+                tools:text="Dragon 2.0"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toStartOf="@+id/text_capsule_status" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
+        <TextView
+                android:text="..."
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_capsule_details"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                tools:text='"Rumored to be used for Inflight Abort Test after DM-1"'
+                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+        <TextView
+                android:text="..."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_capsule_status"
+                app:layout_constraintTop_toTopOf="@+id/text_capsule_type"
+                app:layout_constraintStart_toEndOf="@+id/text_capsule_type" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textAllCaps="true"
+                tools:text="ACTIVE"/>
+        <TextView
+                android:text="Landings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/text_capsule_landings"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_capsule_details"/>
+        <TextView
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_capsule_landings"
+                app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" tools:text="0"/>
+        <TextView
+                android:text="Reused"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:layout_constraintStart_toStartOf="@+id/textView3"
+        />
+        <TextView
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_capsule_reused"
+                app:layout_constraintTop_toTopOf="@+id/textView5"
+                app:layout_constraintEnd_toEndOf="@+id/text_capsule_landings"
+                tools:text="0"/>
+        <TextView
+                android:text="Type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/text_capsule_serial"
+                app:layout_constraintStart_toStartOf="@+id/text_capsule_type"
+                app:layout_constraintEnd_toEndOf="@+id/text_capsule_type"/>
+        <TextView
+                android:text="Status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView11"
+                app:layout_constraintTop_toTopOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/text_capsule_status"
+                app:layout_constraintEnd_toEndOf="@+id/text_capsule_status"/>
+        <TextView
+                android:text="Details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12"
+                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_capsule_launch"/>
+        <TextView
+                android:text="Capsule serial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView13"
+                app:layout_constraintTop_toBottomOf="@+id/image_capsule" android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/text_capsule_serial"
+                app:layout_constraintEnd_toEndOf="@+id/text_capsule_serial"/>
+        <TextView
+                android:text="Original launch (UTC time)"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView14" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/text_capsule_type"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_capsule_launch" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" tools:text="2016-02-19"
+                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
