Add next launch fragment, connect it with nav view destination

--- a/app/src/main/res/menu/menu_nav_view.xml
+++ b/app/src/main/res/menu/menu_nav_view.xml
@@ -20,6 +20,12 @@
             android:checkable="true"/>
 
     <item
+            android:id="@id/next_launch_dest"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="Next Launch"
+            android:checkable="true"/>
+
+    <item
             android:id="@id/settings_dest"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="Settings"
